--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,1 +1,4 @@
+@use "./reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+@use "./variables" as *;
+@use "./mixins" as *;
