--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,217 @@
 @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+* {
+  box-sizing: border-box;
+}
+
+/* img {
+  display: block;
+  width: 100%;
+  height: auto;
+} */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: #3e52a3;
+}
+
+body {
+  width: 100%;
+  max-width: 1440px;
+  height: 100%;
+  max-height: 770px;
+  background-image: linear-gradient(#af67e9, #6565e7);
+  margin: 0 auto;
+  padding: 130px 260px;
+  z-index: 1;
+}
+
+.container {
+  width: 100%;
+  max-width: 920px;
+  height: 100%;
+  max-height: 510px;
+  background-color: #fff;
+  margin: 0 auto;
+  border-radius: 20px;
+  display: flex;
+}
+
+div.image {
+  width: 43%;
+  position: relative;
+}
+div.image img {
+  display: block;
+}
+div.image img.woman {
+  position: absolute;
+  left: -80px;
+  top: 70px;
+  z-index: 1;
+}
+div.image img.pattern {
+  position: absolute;
+  left: -590px;
+  top: -300px;
+  z-index: 0;
+}
+div.image img.box {
+  position: absolute;
+  left: -98px;
+  top: 200px;
+  z-index: 2;
+}
+
+div.content {
+  width: 57%;
+  padding: 60px 80px 80px 80px;
+  display: flex;
+  flex-wrap: wrap;
+}
+div.content h1 {
+  font-family: Kumbh Sans;
+  font-size: 12px;
+  font-weight: 700;
+  color: #1d1e35;
+  font-size: 24px;
+}
 
 /*# sourceMappingURL=style.css.map */
