--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,72 @@
 @use "./reset.css";
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
 @use "./variables" as *;
 @use "./mixins" as *;
+
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+body {
+  width: 100%;
+  max-width: 1440px;
+  height: 100%;
+  max-height: 770px;
+  background-image: linear-gradient($bgc-soft-violet, $bgc-soft-blue);
+  margin: 0 auto;
+  padding: 130px 260px;
+  z-index: 1;
+}
+
+.container {
+  width: 100%;
+  max-width: 920px;
+  height: 100%;
+  max-height: 510px;
+  background-color: #fff;
+  margin: 0 auto;
+
+  border-radius: 20px;
+  display: flex;
+  //   flex-wrap: wrap;
+}
+div.image {
+  width: 43%;
+  position: relative;
+  img {
+    display: block;
+    &.woman {
+      position: absolute;
+      left: -80px;
+      top: 70px;
+      z-index: 1;
+    }
+    &.pattern {
+      position: absolute;
+      left: -590px;
+      top: -300px;
+      z-index: 0;
+    }
+    &.box {
+      position: absolute;
+      left: -98px;
+      top: 200px;
+      z-index: 2;
+    }
+  }
+}
+div.content {
+  width: 57%;
+  padding: 60px 80px 80px 80px;
+  display: flex;
+  flex-wrap: wrap;
+  h1 {
+    @include bold_font();
+    font-size: 24px;
+  }
+}
