--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,6 +4,6 @@ $bgc-soft-violet: hsl(273, 75%, 66%);
 $bgc-soft-blue: hsl(240, 73%, 65%);
 $font-vd-grayish-blue: hsl(237, 12%, 33%);
 $font-dark-grayish-blue: hsl(240, 6%, 50%);
-$div-lilght-grayish-blue: hsl(240, 5%, 91%);
+$div-light-grayish-blue: hsl(240, 5%, 91%);
 
 $font-family: Kumbh Sans;
