--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,9 +15,11 @@
 body {
   width: 100%;
   max-width: 1440px;
-  height: 100%;
-  max-height: 770px;
+  height: auto;
+  //   max-height: 770px;
   background-image: linear-gradient($bgc-soft-violet, $bgc-soft-blue);
+  background-size: cover;
+  background-repeat: no-repeat;
   margin: 0 auto;
   padding: 130px 260px;
   z-index: 1;
@@ -27,46 +29,89 @@ body {
   width: 100%;
   max-width: 920px;
   height: 100%;
-  max-height: 510px;
+  min-height: 510px;
   background-color: #fff;
-  margin: 0 auto;
-
   border-radius: 20px;
   display: flex;
-  //   flex-wrap: wrap;
-}
-div.image {
-  width: 43%;
-  position: relative;
-  img {
-    display: block;
-    &.woman {
-      position: absolute;
-      left: -80px;
-      top: 70px;
-      z-index: 1;
+  div.image {
+    width: 43%;
+    height: auto;
+    max-height: 510px;
+    position: relative;
+    .wrapper {
+      width: 100%;
+      max-width: 395px;
+      height: auto;
+      max-height: 510px;
+      overflow: hidden;
+      img {
+        display: block;
+        &.woman {
+          position: absolute;
+          left: -80px;
+          top: 70px;
+          z-index: 1;
+          clip: rect(0px, 480px, 510px, 80px);
+        }
+        &.pattern {
+          position: absolute;
+          left: -560px;
+          top: -289px;
+          z-index: 0;
+          clip: rect(289px, 1185px, 855px, 559px);
+        }
+      }
     }
-    &.pattern {
+    img.box {
+      display: block;
       position: absolute;
-      left: -590px;
-      top: -300px;
-      z-index: 0;
-    }
-    &.box {
-      position: absolute;
-      left: -98px;
+      left: -95px;
       top: 200px;
       z-index: 2;
     }
   }
-}
-div.content {
-  width: 57%;
-  padding: 60px 80px 80px 80px;
-  display: flex;
-  flex-wrap: wrap;
-  h1 {
-    @include bold_font();
-    font-size: 24px;
+  div.content {
+    width: 57%;
+    padding: 60px 80px 80px 80px;
+
+    h1 {
+      @include bold_font();
+      font-size: 24px;
+      padding-top: 10px;
+    }
+    .question {
+      @include font();
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-content: center;
+      height: 50px;
+      line-height: 12px;
+      &:hover {
+        color: $font-soft-red;
+        cursor: pointer;
+        transition: all, 300ms;
+      }
+      &:active {
+        color: $font-vd-grayish-blue;
+        font-weight: 700;
+      }
+    }
+    .question__answer {
+      display: none;
+      @include answer_font();
+      line-height: 17px;
+      padding-bottom: 20px;
+      position: relative;
+      &::after {
+        display: block;
+        content: "";
+        background-color: $div-light-grayish-blue;
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        bottom: 5px;
+      }
+    }
   }
 }
