--- a/styles/style.css
+++ b/styles/style.css
@@ -183,24 +183,17 @@ body {
   max-height: 510px;
   position: relative;
 }
-.container div.image .wrapper {
-  width: 100%;
-  max-width: 395px;
-  height: auto;
-  max-height: 510px;
-  overflow: hidden;
-}
-.container div.image .wrapper img {
+.container div.image img {
   display: block;
 }
-.container div.image .wrapper img.woman {
+.container div.image img.woman {
   position: absolute;
   left: -80px;
   top: 70px;
   z-index: 1;
   clip: rect(0px, 480px, 510px, 80px);
 }
-.container div.image .wrapper img.pattern {
+.container div.image img.pattern {
   position: absolute;
   left: -560px;
   top: -289px;
@@ -208,7 +201,6 @@ body {
   clip: rect(289px, 1185px, 855px, 559px);
 }
 .container div.image img.box {
-  display: block;
   position: absolute;
   left: -95px;
   top: 200px;
@@ -217,6 +209,7 @@ body {
 .container div.content {
   width: 57%;
   padding: 60px 80px 80px 80px;
+  overflow-y: scroll;
 }
 .container div.content h1 {
   font-family: Kumbh Sans;
@@ -225,30 +218,45 @@ body {
   color: #1d1e35;
   font-size: 24px;
   padding-top: 10px;
+  padding-bottom: 45px;
 }
 .container div.content .question {
-  font-family: Kumbh Sans;
-  font-size: 1.2rem;
-  font-weight: 400;
-  color: #1d1e35;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: center;
+}
+.container div.content .question a.question__title {
+  font-family: Kumbh Sans;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #1d1e35;
+  text-decoration: none;
+  position: relative;
+  display: block;
   height: 50px;
   line-height: 12px;
 }
-.container div.content .question:hover {
+.container div.content .question a.question__title::after {
+  display: block;
+  content: "";
+  background-color: #e7e7e9;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  bottom: -20px;
+}
+.container div.content .question a.question__title:hover {
   color: #f47c57;
   cursor: pointer;
   transition: all, 300ms;
 }
-.container div.content .question:active {
+.container div.content .question a.question__title:active {
   color: #4a4b5e;
   font-weight: 700;
 }
 .container div.content .question__answer {
-  display: none;
+  display: block;
   font-family: Kumbh Sans;
   font-size: 1.2rem;
   font-weight: 400;
@@ -256,15 +264,6 @@ body {
   line-height: 17px;
   padding-bottom: 20px;
   position: relative;
-}
-.container div.content .question__answer::after {
-  display: block;
-  content: "";
-  background-color: #e7e7e9;
-  width: 100%;
-  height: 1px;
-  position: absolute;
-  bottom: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
