--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,80 +38,80 @@ body {
     height: auto;
     max-height: 510px;
     position: relative;
-    .wrapper {
-      width: 100%;
-      max-width: 395px;
-      height: auto;
-      max-height: 510px;
-      overflow: hidden;
-      img {
-        display: block;
-        &.woman {
-          position: absolute;
-          left: -80px;
-          top: 70px;
-          z-index: 1;
-          clip: rect(0px, 480px, 510px, 80px);
-        }
-        &.pattern {
-          position: absolute;
-          left: -560px;
-          top: -289px;
-          z-index: 0;
-          clip: rect(289px, 1185px, 855px, 559px);
-        }
-      }
-    }
-    img.box {
+
+    img {
       display: block;
-      position: absolute;
-      left: -95px;
-      top: 200px;
-      z-index: 2;
+      &.woman {
+        position: absolute;
+        left: -80px;
+        top: 70px;
+        z-index: 1;
+        clip: rect(0px, 480px, 510px, 80px);
+      }
+      &.pattern {
+        position: absolute;
+        left: -560px;
+        top: -289px;
+        z-index: 0;
+        clip: rect(289px, 1185px, 855px, 559px);
+      }
+      &.box {
+        position: absolute;
+        left: -95px;
+        top: 200px;
+        z-index: 2;
+      }
     }
   }
   div.content {
     width: 57%;
     padding: 60px 80px 80px 80px;
-
+    overflow-y: scroll;
     h1 {
       @include bold_font();
       font-size: 24px;
       padding-top: 10px;
+      padding-bottom: 45px;
     }
     .question {
-      @include font();
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       align-content: center;
-      height: 50px;
-      line-height: 12px;
-      &:hover {
-        color: $font-soft-red;
-        cursor: pointer;
-        transition: all, 300ms;
-      }
-      &:active {
-        color: $font-vd-grayish-blue;
-        font-weight: 700;
+
+      a.question__title {
+        @include font();
+        text-decoration: none;
+        position: relative;
+        display: block;
+        height: 50px;
+        line-height: 12px;
+        &::after {
+          display: block;
+          content: "";
+          background-color: $div-light-grayish-blue;
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          bottom: -20px;
+        }
+        &:hover {
+          color: $font-soft-red;
+          cursor: pointer;
+          transition: all, 300ms;
+        }
+        &:active {
+          color: $font-vd-grayish-blue;
+          font-weight: 700;
+        }
       }
     }
     .question__answer {
-      display: none;
+      display: block;
       @include answer_font();
       line-height: 17px;
       padding-bottom: 20px;
       position: relative;
-      &::after {
-        display: block;
-        content: "";
-        background-color: $div-light-grayish-blue;
-        width: 100%;
-        height: 1px;
-        position: absolute;
-        bottom: 5px;
-      }
     }
   }
 }
