--- a/styles/style.css
+++ b/styles/style.css
@@ -209,7 +209,6 @@ body {
 .container div.content {
   width: 57%;
   padding: 60px 80px 80px 80px;
-  overflow-y: scroll;
 }
 .container div.content h1 {
   font-family: Kumbh Sans;
@@ -218,7 +217,7 @@ body {
   color: #1d1e35;
   font-size: 24px;
   padding-top: 10px;
-  padding-bottom: 45px;
+  padding-bottom: 25px;
 }
 .container div.content .question {
   display: flex;
@@ -226,25 +225,27 @@ body {
   justify-content: space-between;
   align-content: center;
 }
+.container div.content .question::after {
+  display: block;
+  content: "";
+  background-color: #e7e7e9;
+  width: 100%;
+  height: 1px;
+}
 .container div.content .question a.question__title {
   font-family: Kumbh Sans;
   font-size: 1.2rem;
   font-weight: 400;
   color: #1d1e35;
   text-decoration: none;
-  position: relative;
+  padding-top: 20px;
   display: block;
   height: 50px;
   line-height: 12px;
 }
-.container div.content .question a.question__title::after {
-  display: block;
-  content: "";
-  background-color: #e7e7e9;
-  width: 100%;
-  height: 1px;
-  position: absolute;
-  bottom: -20px;
+.container div.content .question a.question__title--view {
+  color: #4a4b5e;
+  font-weight: 700;
 }
 .container div.content .question a.question__title:hover {
   color: #f47c57;
@@ -255,8 +256,14 @@ body {
   color: #4a4b5e;
   font-weight: 700;
 }
+.container div.content .question a.question__icon {
+  padding-top: 15px;
+}
+.container div.content .question a.question__icon--view {
+  transform: rotate(180deg);
+}
 .container div.content .question__answer {
-  display: block;
+  display: none;
   font-family: Kumbh Sans;
   font-size: 1.2rem;
   font-weight: 400;
@@ -264,6 +271,9 @@ body {
   line-height: 17px;
   padding-bottom: 20px;
   position: relative;
+}
+.container div.content .question__answer--view {
+  display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
