--- a/styles/style.css
+++ b/styles/style.css
@@ -242,8 +242,9 @@ body {
   display: block;
   height: 50px;
   line-height: 12px;
+  transition: all, 300ms;
 }
-.container div.content .question a.question__title--view {
+.container div.content .question a.question__title.--view {
   color: #4a4b5e;
   font-weight: 700;
 }
@@ -252,15 +253,13 @@ body {
   cursor: pointer;
   transition: all, 300ms;
 }
-.container div.content .question a.question__title:active {
-  color: #4a4b5e;
-  font-weight: 700;
-}
 .container div.content .question a.question__icon {
   padding-top: 15px;
+  transition: all, 300ms;
 }
-.container div.content .question a.question__icon--view {
+.container div.content .question a.question__icon.--view {
   transform: rotate(180deg);
+  transition: all 300ms;
 }
 .container div.content .question__answer {
   display: none;
@@ -271,8 +270,9 @@ body {
   line-height: 17px;
   padding-bottom: 20px;
   position: relative;
+  transition: all, 300ms;
 }
-.container div.content .question__answer--view {
+.container div.content .question__answer.--view {
   display: block;
 }
 
